--- a/Exercise_Files/Ch02/02_01/Start/index.html
+++ b/Exercise_Files/Ch02/02_01/Start/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
 	<title>02_01 Exercise - Start</title>
 	<meta charset="utf-8">
@@ -8,5 +9,14 @@
 </head>
 
 <body>
+	<h1>About You</h1>
+	<form id="question" method="post" action="">
+		<label for="favcolor">What is your favorite color?</label><input type="text" name="favcolor" id="favcolor">
+		<input type="submit">
+
+
+
+	</form>
 </body>
+
 </html>
