--- a/Exercise_Files/Ch02/02_02/Start/index.html
+++ b/Exercise_Files/Ch02/02_02/Start/index.html
@@ -9,6 +9,9 @@
 
 <body>
 	<form action="" id="questions" method="post" name="questions">
+		<input type="text" id="name" name="name"><label for="name">Name</label><br>
+		<input type="email" name="email" id="email" multiple><label for="email">Email</label><br>
+		<input type="url" id="website" name="website"><label for="website">Website</label><br>
 		<input type="submit">
 	</form>
 </body>
