--- a/Exercise_Files/Ch02/02_03/Start/index.html
+++ b/Exercise_Files/Ch02/02_03/Start/index.html
@@ -9,6 +9,7 @@
 
 <body>
 	<form action="" id="questions" method="post" name="questions">
+		<input type="number" name="number" id="number" min="-4" max="12"><label for="number">Number</label><br>
 		<input type="submit">
 	</form>
 </body>
