--- a/Exercise_Files/Ch02/02_04/Start/index.html
+++ b/Exercise_Files/Ch02/02_04/Start/index.html
@@ -10,6 +10,9 @@
 <body>
 	<form action="" id="questions" method="post" name="questions">
 		<input type="number" name="number" id="number" step="any"><label for="number">Number</label><br>
+		<input type="date" name="birthday" id="birthday" min="2017-01-01" max="2017-12-31"><label for="birthday">Birthday</label><br>
+		<input type="time" name="time" id="time"><label for="time">Time</label><br>
+		<input type="tel" name="telephone" id="telephone"><label for="telephone">Telephone</label><br>
 		<input type="submit">
 	</form>
 </body>
