--- a/Exercise_Files/Ch02/02_05/Start/index.html
+++ b/Exercise_Files/Ch02/02_05/Start/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
 	<title>02_05 Exercise - Start</title>
 	<meta charset="utf-8">
@@ -9,7 +10,34 @@
 
 <body>
 	<form action="" id="questions" method="post" name="questions">
+		<fieldset>
+			<legend>
+				What is your favorite color?
+			</legend>
+
+
+			<input type="radio" name="favcolor" value="blue" id="blue"><label for="blue">blue</label><br>
+			<input type="radio" name="favcolor" value="red" id="red" checked><label for="red">red</label><br>
+			<input type="radio" name="favcolor" value="green" id="green"><label for="green">green</label><br>
+
+		</fieldset>
+		<br>
+
+		<label for="pizza">What is your favorite pizza topping?</label>
+		<select name="pizza" id="pizza"multiple size="7">
+			<optgroup label="veggies">
+			<option value="mushroom">mushroom</option>
+			<option value="jalapeno">jalapeno</option>
+			<option value="green pepper">green pepper</option>
+			</optgroup>
+			<optgroup label="meat">
+			<option value="beef">beef</option>
+			</optgroup>
+		</select>
+		<br>
+		<br>
 		<input type="submit">
 	</form>
 </body>
+
 </html>
