--- a/Exercise_Files/Ch02/02_07/Start/index.html
+++ b/Exercise_Files/Ch02/02_07/Start/index.html
@@ -9,6 +9,18 @@
 
 <body>
 	<form action="" id="questions" method="post" name="questions">
+		<label for="poem">Write a poem</label>
+		<textarea id="poem" name="poem"><</textarea><br><br>
+		<label for="color">color</label>
+		<input type="color" name="color" id="color"><br><br>
+		<label for="resume">Upload your resume</label>
+		<input type="file" name="resume" id="resume" accept="image/*"><br><br>
+		<label for="password">password</label>
+		<input type="password" name="password" id="password"><br><br>
+
+		<input type="range" min="1" max="10" step="1"><br><br>
+		<label for="search">Search</label>
+		<input type="search" name="search" id="search"><br><br>
 		<input type="submit">
 	</form>
 </body>
