--- a/Exercise_Files/Ch02/02_08/Start/index.html
+++ b/Exercise_Files/Ch02/02_08/Start/index.html
@@ -10,6 +10,12 @@
 <body>
 	<form action="" id="questions" method="post" name="questions">
 		<label for="name"><input type="text" name="name" id="name"><br><br>
+			<input type="submit" value="submit answers"><br><br>
+			<input type="reset" value="reset"><br><br>
+			<input type="button" value="Fart Maker"><br><br>
+			<input type="image" src= "bird.jpg"	alt="bird" width="130">
+			
+
 
 	</form>
 </body>
